@@ -1,5 +1,6 @@
 pre-0.18.4:
 - avr: Step ISR code optimization e.g. get rid of digitalRead/Write
+- esp32: get rid of digitalRead/Write, too
 
 0.18.3:
 - esp32: extend API to attach free pulse counter for debugging
